--- a/index.html
+++ b/index.html
@@ -327,11 +327,16 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">CV</h2>
                                     <br/>
+                                    <a href="assets/portfolios/CV_2022.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/aml_cv_mockup.png" alt="..." />
+                                    </a>
                                     <p>Vous trouverez ci-joint mon CV.<br/>N'hésitez pas à le consulter et à me contacter pour tout complément d'information dont vous pourriez avoir besoin.</p>
-                                    <br/>
-                                    <iframe src="assets/portfolios/CV_2022.pdf" style="width:100%;height:1200px;" frameborder="0"></iframe>
-                                    <br/><br/><br/>
+                                    <a href="assets/portfolios/CV_2022.pdf">
+                                        <button class="btn btn-primary btn-xl" type="button">
+                                            <i class="me-1"></i>
+                                            CV
+                                        </button>
+                                    </a><br/><br/><br/>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Close Project
@@ -355,12 +360,12 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Diplôme et certificat de notes</h2>
                                     <br/>
-                                    <a href="assets/portfolios/msc_diploma.pdf" download="aml_diplome_architecture.pdf">
+                                    <a href="assets/portfolios/msc_diploma.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/diploma_mockup.png" alt="..."/>
                                     </a>
                                     <p>Vous trouverez ci-joint mon diplôme ainsi que le certificat de notes.<br/>
                                         N'hésitez pas à le consulter et à me contacter pour tout complément d'information dont vous pourriez avoir besoin.</p>
-                                    <a href="assets/portfolios/msc_diploma.pdf" download="aml_diplome_architecture.pdf">
+                                    <a href="assets/portfolios/msc_diploma.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Diplôme
@@ -396,14 +401,14 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Thèse de Master</h2>
                                     <br/>
-                                    <a href="assets/portfolios/msc_portfolio.pdf" download="aml_these_master.pdf">
+                                    <a href="assets/portfolios/msc_portfolio.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/msc_mockup.png" alt="..." />
                                     </a>
                                     <p>Projet de thèse de Master - Reprogrammation architecturale d'objets, de lieux et d'espaces.<br/>
                                         Mentor: Prof. Jovan Ivanovski<br/>
                                         Période: 01.2015 - 09.2015
                                     </p>
-                                    <a href="assets/portfolios/msc_portfolio.pdf" download="aml_these_master.pdf">
+                                    <a href="assets/portfolios/msc_portfolio.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Thèse
@@ -445,20 +450,20 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Maîtrise d'études avancées en conservation du patrimoine et muséologie</h2>
-                                    <a href="assets/portfolios/mas_memoire.pdf" download="aml_memoire_conservation_patrimoine.pdf">
+                                    <a href="assets/portfolios/mas_memoire.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/mas_mockup.png" alt="..." />
                                     </a>
                                     <p>Vous trouverez ci-joint mon diplôme de MAS et le certificat de notes, ainsi que mon mémoire sur l'histoire et la rénovation d'un îlot urbain du début du XXème siècle situé à Lausanne, Suisse.<br/>
                                         Le MAS est un programme d'études avancées des universités de Genève, Lausanne et Fribourg. Cette formation allie théorie (enseignement) et pratique (travail sur le terrain et stage). Elle implique des partenariats nationaux (musées et offices cantonaux de la conservation du patrimoine) et internationaux (UNESCO, ICOMOS, DOCOMOMO, IRPA, Fondation Le Corbusier, etc.).
                                     </p>
-                                    <a href="assets/portfolios/mas_diploma.pdf" download="aml_diplome_conservation_patrimoine.pdf">
+                                    <a href="assets/portfolios/mas_diploma.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Diplôme
                                         </button>
                                     </a>
                                     <br/><br/><br/>
-                                    <a href="assets/portfolios/mas_memoire.pdf" download="aml_memoire_conservation_patrimoine.pdf">
+                                    <a href="assets/portfolios/mas_memoire.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Mémoire
@@ -506,7 +511,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Projets académiques</h2>
-                                    <a href="assets/portfolios/pa_portfolio.pdf" download="aml_projets_academiques.pdf">
+                                    <a href="assets/portfolios/pa_portfolio.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/pa_mockup.png" alt="..." />
                                     </a>
                                     <p>Vous trouverez ci-joint mon portfolio de projets universitaires sélectionnés.<br/><br/>
@@ -518,7 +523,7 @@
                                             <li>Une revitalisation d'un hammam;</li>
                                         </ul>
                                     </p>
-                                    <a href="assets/portfolios/pa_portfolio.pdf" download="aml_projets_academiques.pdf">
+                                    <a href="assets/portfolios/pa_portfolio.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Portfolio
@@ -568,14 +573,14 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Projets professionnels</h2>
-                                    <a href="assets/portfolios/pp_portfolio.pdf" download="aml_projets_professionnels.pdf">
+                                    <a href="assets/portfolios/pp_portfolio.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/pp_mockup.png" alt="..." />
                                     </a>
                                     <p>Il s'agit d'une collection de travaux que j'ai réalisée pendant que je travaillais à l'entreprise Zikol à Strumica, en Macédoine, ainsi qu'à Protec Etudes et Réalisations Sàrl à Echallens, en Suisse.<br/><br/>
                                         Ce ne sont que quelques-uns des nombreux projets en cours dans les deux entreprises, auxquels j'ai été une collaboratrice directe.<br/><br/>
                                         Vous trouverez une explication plus détaillée des œuvres dans le portfolio lui-même.
                                     </p>
-                                    <a href="assets/portfolios/pp_portfolio.pdf" download="aml_projets_professionnels.pdf">
+                                    <a href="assets/portfolios/pp_portfolio.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Portfolio
@@ -603,11 +608,11 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Visualisation 3D</h2>
-                                    <a href="assets/portfolios/3ds_portfolio.pdf" download="aml_portfolio_3d.pdf">
+                                    <a href="assets/portfolios/3ds_portfolio.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/3ds_mockup.png" alt="..." />
                                     </a>
                                     <p>Vous trouverez ci-joint une collection d'images 3D que j'ai conçues au cours de mon travail.</p>
-                                    <a href="assets/portfolios/3ds_portfolio.pdf" download="aml_portfolio_3d.pdf">
+                                    <a href="assets/portfolios/3ds_portfolio.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Portfolio
@@ -650,11 +655,11 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Design graphique</h2>
-                                    <a href="assets/portfolios/gd_portfolio.pdf" download="aml_portfolio_design_graphique.pdf">
+                                    <a href="assets/portfolios/gd_portfolio.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/gd_mockup.png" alt="..." />
                                     </a>
                                     <p>Une collection de projets de conception graphique pour des clients privés, lorsque je travaillais activement en tant que graphiste indépendante.</p>
-                                    <a href="assets/portfolios/gd_portfolio.pdf" download="aml_portfolio_design_graphique.pdf">
+                                    <a href="assets/portfolios/gd_portfolio.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Portfolio
