--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/mockups/pa_mockup.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/mockups/pp_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Projets académiques</div>
+                                <div class="portfolio-caption-heading">Projets professionnels</div>
                                 <!--<div class="portfolio-caption-subheading text-muted">Identity</div>-->
                             </div>
                         </div>
@@ -189,10 +189,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/mockups/pp_mockup.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/mockups/pa_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Projets professionnels</div>
+                                <div class="portfolio-caption-heading">Projets académiques</div>
                                 <!--<div class="portfolio-caption-subheading text-muted">Website Design</div>-->
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                                     <br/><br/><br/>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -377,7 +377,7 @@
                                     <br/>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -427,7 +427,7 @@
                                     <br/>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -488,7 +488,7 @@
                                     </p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -499,6 +499,67 @@
         </div>
         <!-- Portfolio item 5 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project details-->
+                                    <h2 class="text-uppercase">Projets professionnels</h2>
+                                    <a href="assets/portfolios/pp_portfolio.pdf">
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/mockups/pp_mockup.png" alt="..." />
+                                    </a>
+                                    <p>Ici vous trouverez une collection de travaux que j'ai réalisée pendant mon parcours professionnel en Suisse chez Protec Etudes et Réalisations Sàrl à Echallens.<br/>
+                                        L'ensemble consiste d'exemples des différentes phases de projet, tels que avant-projet, enquête, exécution et détails.<br/>
+                                        Ce ne sont que quelques-uns des nombreux projets auxquels j'ai été une collaboratrice directe.
+                                    </p>
+                                    <a href="assets/portfolios/protec_avant_projet_champagne.pdf">
+                                        <button class="btn btn-primary btn-xl" type="button">
+                                            <i class="me-1"></i>
+                                            Avant-Projet
+                                        </button>
+                                    </a>
+                                    <br/><br/>
+                                    <a href="assets/portfolios/protec_enquete_champagne.pdf">
+                                        <button class="btn btn-primary btn-xl" type="button">
+                                            <i class="me-1"></i>
+                                            Enquête
+                                        </button>
+                                    </a>
+                                    <br/><br/>
+                                    <a href="assets/portfolios/protec_execution_et_details_grandson.pdf">
+                                        <button class="btn btn-primary btn-xl" type="button">
+                                            <i class="me-1"></i>
+                                            Exécution + Détails
+                                        </button>
+                                    </a>
+                                    <br/><br/><br/>
+                                    <p>
+                                        Si vous êtes davantage intéressés, vous pouvez consulter également la collection de travaux que j'ai réalisée pendant que je travaillais à l'entreprise Zikol à Strumica, en Macédoine.<br/>
+                                        Vous trouverez une explication plus détaillée des œuvres dans le portfolio lui-même.
+                                    </p>
+                                    <a href="assets/portfolios/pp_portfolio.pdf">
+                                        <button class="btn btn-primary btn-xl" type="button">
+                                            <i class="me-1"></i>
+                                            Portfolio Zikol
+                                        </button>
+                                    </a>
+                                    <br/><br/><br/><br/>
+                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                        <i class="fas fa-xmark me-1"></i>
+                                        Fermer
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio item 6 modal popup-->
+        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
@@ -550,42 +611,7 @@
                                     <br/>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Portfolio item 6 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h2 class="text-uppercase">Projets professionnels</h2>
-                                    <a href="assets/portfolios/pp_portfolio.pdf">
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/mockups/pp_mockup.png" alt="..." />
-                                    </a>
-                                    <p>Il s'agit d'une collection de travaux que j'ai réalisée pendant que je travaillais à l'entreprise Zikol à Strumica, en Macédoine, ainsi qu'à Protec Etudes et Réalisations Sàrl à Echallens, en Suisse.<br/><br/>
-                                        Ce ne sont que quelques-uns des nombreux projets en cours dans les deux entreprises, auxquels j'ai été une collaboratrice directe.<br/><br/>
-                                        Vous trouverez une explication plus détaillée des œuvres dans le portfolio lui-même.
-                                    </p>
-                                    <a href="assets/portfolios/pp_portfolio.pdf">
-                                        <button class="btn btn-primary btn-xl" type="button">
-                                            <i class="me-1"></i>
-                                            Portfolio
-                                        </button>
-                                    </a><br/><br/><br/>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -632,7 +658,7 @@
                                     </p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -677,7 +703,7 @@
                                     </p>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
